--- a/src/components/index.html
+++ b/src/components/index.html
@@ -36,7 +36,7 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="client/index.js" type="module"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
