refactor code and create registration

--- a/src/components/document/document.html
+++ b/src/components/document/document.html
@@ -21,7 +21,7 @@
     <textarea id="editor-texto" class="form-control mb-4" style="height: 400px; resize: none;"></textarea>
 
     <div class="d-flex justify-content-between">
-      <a href="index.html" class="btn btn-primary">Voltar</a>
+      <a href="../index.html" class="btn btn-primary">Voltar</a>
       <button id="excluir-documento" class="btn btn-outline-danger">Excluir documento</button>
     </div>
   </main>
@@ -30,7 +30,7 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="documento.js" type="module"></script>
+  <script src="document.js" type="module"></script>
 </body>
 
 </html>
