--- a/src/components/index.html
+++ b/src/components/index.html
@@ -9,12 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-  <title>Documentos para estudo</title>
+  <title>AluraDocs</title>
 </head>
 
-<body class="col-lg-6 mt-3 mx-auto">
+<body class="col-lg-6 my-3 mx-auto">
   <header>
-    <h1 class="text-center display-2 mb-4">Documentos para estudo</h1>
+    <h1 class="text-center display-2 mb-4">AluraDocs</h1>
+
+    <button id="botao-logout" class="btn btn-outline-primary position-absolute top-0 end-0 mt-5 me-5">Logout</button>
   </header>
 
   <main class="w-75 mx-auto">
@@ -35,6 +37,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="index.js" type="module"></script>
 </body>
